k8s/apps/media/transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission-openvpn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission-openvpn
  template:
    metadata:
      labels:
        app: transmission-openvpn
    spec:
      containers:
      - name: transmission-openvpn
        image: haugene/transmission-openvpn
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        volumeMounts:
        - name: data-volume
          mountPath: /data
        - name: config-volume
          mountPath: /config
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: transmission-data
      - name: config-volume
        persistentVolumeClaim:
          claimName: transmission-config
