k8s/apps/media/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-openvpn
spec:
  selector:
    app: transmission-openvpn
  ports:
  - name: http
    port: 9091
    protocol: TCP
    targetPort: 9091
  type: ClusterIP
